--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/media_query.css" /> <!-- >>>> Media Query CSS Link <<<<-->
   <link rel="stylesheet" href="styles/animation.css" /> <!-- >>>> Animation CSS Link <<<<-->
   <script src="https://kit.fontawesome.com/e93aea0e6d.js" crossorigin="anonymous"></script>
-  <!-- >>>> Favicon Link <<<<-->
+  <!-- >>>> Font Awesome Link <<<<-->
   <title>Football Club</title>
 </head>
 
